Responsive desktop/tablet

--- a/index.html
+++ b/index.html
@@ -64,13 +64,15 @@
       <form>
         <div>Informações pessoais</div>
         <fieldset>
-          <div class="input-wrapper 2fr">
-            <label for="name">Nome</label>
-            <input type="text" id="name" />
-          </div>
-          <div class="input-wrapper 2fr">
-            <label for="lastname">Sobrenome</label>
-            <input type="text" id="lastname" />
+          <div class="2fr">
+            <div class="input-wrapper">
+              <label for="name">Nome</label>
+              <input type="text" id="name" />
+            </div>
+            <div class="input-wrapper">
+              <label for="lastname">Sobrenome</label>
+              <input type="text" id="lastname" />
+            </div>
           </div>
           <div class="input-wrapper">
             <label for="mail">Email<span>(digite um email válido)</span></label>
@@ -104,7 +106,7 @@
           </div>
         </fieldset>
 
-        <fieldset>
+        <fieldset class="3fr">
           <legend>Agendando próxima mentoria.</legend>
 
           <div class="input-wrapper">
